design.css
html {
    position: relative;
    min-height: 100%;
}

body {
	margin: 0;
	width: 100%;
	height: 100vh;
	color: #fff;
	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
	background-size: 400% 400%;
	-webkit-animation: gradientBG 10s ease infinite;
			animation: gradientBG 10s ease infinite;
    overflow: scroll-y;
    overflow-x: hidden;
}

.container {
	width: 100%;
	position: absolute;
	top: 40%;
	text-align: center;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 60px;
    line-height: 20px;
    color: black;
    background-color: #f5f5f5;
}

.textoverflow {
    display: block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.textoverflowlist {
    position: relative;
}

.textoverflowlist::before {
    content: '&nbsp;';
    visibility: hidden;
}

.textoverflowlist span {
    position: absolute;
    left: 0;
    right: 0;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    margin-left: 8px;
}

.gridbutton {
    margin: 2px;
}

@-webkit-keyframes gradientBG {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}
@keyframes gradientBG {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

